fix: service login

--- a/hotelRestaurant/src/app/modules/auth/auth-user/auth-user.component.html
+++ b/hotelRestaurant/src/app/modules/auth/auth-user/auth-user.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen flex items-center justify-center bg-gray-50">
+<div class="min-h-screen flex items-center justify-center bg-blue-50">
  <div class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md">
    <div class="flex justify-center mb-6">
    </div>
@@ -22,9 +22,11 @@
        </a>
      </div>
      <div class="mt-4 text-center">
-       <a class="inline-block align-baseline font-semibold text-sm text-gray-600 hover:text-gray-800" href="#">
-         ¿No tiene cuenta? Regístrese aquí
-       </a>
+      <a 
+        href="/session/register"
+        class="inline-block align-baseline font-semibold text-sm text-gray-600 hover:text-gray-800">
+        ¿No tiene cuenta? Regístrese 
+      </a>
      </div>
    </form>
  </div>
