--- a/hotelRestaurant/src/app/modules/auth/auth-user/auth-user.component.html
+++ b/hotelRestaurant/src/app/modules/auth/auth-user/auth-user.component.html
@@ -3,14 +3,14 @@
    <div class="flex justify-center mb-6">
    </div>
    <h2 class="text-2xl font-semibold mb-6 text-gray-800 text-center">LOGIN USUARIO</h2>
-   <form>
+   <form [formGroup]="loginForm" (ngSubmit)="login()">
      <div class="mb-4">
        <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Correo Electrónico</label>
-       <input type="email" id="email" class="shadow appearance-none border rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Tu correo electrónico">
+       <input type="email" formControlName="email" id="email" name= "email"class="shadow appearance-none border rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Tu correo electrónico">
      </div>
      <div class="mb-6">
        <label for="password" class="block text-gray-700 text-sm font-bold mb-2">Contraseña</label>
-       <input type="password" id="password" class="shadow appearance-none border rounded-md w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" placeholder="Tu contraseña">
+       <input type="password" formControlName="password" id="password" name="password" class="shadow appearance-none border rounded-md w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" placeholder="Tu contraseña">
        <p class="text-gray-600 text-xs italic">Ingrese su contraseña</p>
      </div>
      <div class="flex items-center justify-between">
