--- a/hotelRestaurant/src/app/modules/admin/components/layout-admin/layout-admin.component.html
+++ b/hotelRestaurant/src/app/modules/admin/components/layout-admin/layout-admin.component.html
@@ -15,6 +15,9 @@
     <a routerLink="empleados" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
       Empleados
     </a>
+    <a routerLink="cliente" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
+      Clientes
+    </a>
     <a (click)="signOut()" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
      Cerrar Session
     </a>
