--- a/hotelRestaurant/src/app/modules/client/layout-client/layout-client.component.html
+++ b/hotelRestaurant/src/app/modules/client/layout-client/layout-client.component.html
@@ -77,8 +77,8 @@
         </svg>
         Mis Reservas / Pedidos
       </a>
-          <!-- Logout -->
-       <a routerLink="/perfi" routerLinkActive="bg-gray-700 text-yellow-300 font-semibold shadow-md" class="flex items-center px-4 py-3 rounded-xl hover:bg-gray-700 hover:text-yellow-300 group" >
+          <!-- Perfil -->
+       <a routerLink="perfil-cliente" routerLinkActive="bg-gray-700 text-yellow-300 font-semibold shadow-md" class="flex items-center px-4 py-3 rounded-xl hover:bg-gray-700 hover:text-yellow-300 group" >
         <svg class="h-6 w-6 mr-3 text-gray-400 group-hover:text-yellow-300 transition-colors duration-200" fill="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
         </svg>
