--- a/hotelRestaurant/src/app/modules/client/hotel/list-hoteles/list-hoteles.component.html
+++ b/hotelRestaurant/src/app/modules/client/hotel/list-hoteles/list-hoteles.component.html
@@ -1,1 +1,36 @@
-<p>list-hoteles works!</p>
+<div class="p-8 bg-gray-50 min-h-screen">
+  
+  <h1 class="text-4xl font-extrabold text-gray-800 mb-8 text-center">Nuestros Hoteles</h1>
+
+  @if(!loading && hotels && hotels.length > 0){
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      @for (hotel of hotels; track hotel.id) {
+        <div class="bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 transition-all duration-300 transform hover:scale-[1.02] hover:shadow-xl cursor-pointer">
+          
+          <img src="https://www.kayak.com.mx/rimg/dimg/dynamic/29/2023/08/9ad7e8322abdb473d30bd9a932f9caeb.webp" 
+               alt="{{ hotel.name }}" 
+               class="w-full h-48 object-cover object-center">
+
+          <div class="p-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-2 truncate">{{ hotel.name }}</h2>
+            
+            <div class="space-y-2 text-gray-600">
+              <div class="flex items-center">
+                <svg class="w-5 h-5 mr-2 text-blue-500" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>
+                <p>{{ hotel.address }}</p>
+              </div>
+              <button (click)="verDetalles(hotel.id)"
+                class="mt-3 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+                Ver detalles
+                </button>
+            </div>
+          </div>
+        </div>
+      }
+    </div>
+  } @else if (!loading && hotels && hotels.length === 0) {
+    <div class="p-6 text-center text-gray-500">No hay hoteles para mostrar.</div>
+  } @else if (loading) {
+    <div class="p-6 text-center text-gray-500">Cargando detalles...</div>
+  }
+</div>
