--- a/hotelRestaurant/src/app/modules/admin/components/layout-admin/layout-admin.component.html
+++ b/hotelRestaurant/src/app/modules/admin/components/layout-admin/layout-admin.component.html
@@ -12,6 +12,9 @@
     <a routerLink="restaurantes" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
       Restaurantes
     </a>
+    <a routerLink="cuartos" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
+      Habitaciones
+    </a>
     <a routerLink="empleados" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
       Empleados
     </a>
